    and avoid overoptimising.
  * search: Converted to use xapian-omega.
  * Filter hooks are no longer called during the scan phase. This will
    prevent wikilinks added by filters from being scanned properly. But
    no known filter hook does that, so let's not waste time on it.
  * Pass a destpage parameter to the sanitize hook.

 -- Joey Hess <joeyh@debian.org>  Fri, 30 May 2008 19:08:54 -0400

ikiwiki (2.48) unstable; urgency=high

  * Fix security hole that occurred if openid and passwordauth were both
    enabled. passwordauth would allow logging in as a known openid, with an
    empty password. Closes: #483770 (CVE-2008-0169)
  * Add rel=nofollow to edit links. This may prevent some spiders from
    pounding on the cgi following edit links.
  * passwordauth: If Authen::Passphrase is installed, use it to store
    password hashes, crypted with Eksblowfish.
  * `ikiwiki-transiition hashpassword /path/to/srcdir` can be used to
    hash existing plaintext passwords.
  * Passwords will no longer be mailed, but instead a password reset link.
  * The password_cost config setting is provided as a "more security" knob.
  * teximg: Fix logurl.
  * teximg: If the log isn't written, avoid ugly error messages.
  * Updated French translation. Closes: #478530

 -- Joey Hess <joeyh@debian.org>  Fri, 30 May 2008 17:36:07 -0400

ikiwiki (2.47) unstable; urgency=low

  * mdwn: Add a multimarkdown setup file option.
  * If PERL5LIB is set to the libdir when building ikiwiki, calculate and 
    hardcode a proper 'use lib' statement anyway. This fixes a gotcha,
    since PERL5LIB won't work once ikiwiki is running via a wrapper or as
    a cgi.
  * orphans: As a special case, the toplevel index page is never considered
    an orphaned page.
  * inline: Display a message if the 'pages' parameter is missing, before
    it just expanded to nothing.
  * git: Skip over signed-off-by and similar lines in commit messages
    when generating recentchanges.