@@ -3,3 +3,5 @@ searches. For example, "title:foo", or "link:somepage", or "author:foo", or
 "copyright:GPL".
 
 Reference: <http://xapian.org/docs/omega/termprefixes.html>
+
+[[done]] for title and link, which seem like the really useful ones.
