@@ -1,3 +1,5 @@
+$setmap{prefix,title,S}
+$setmap{prefix,link,LINK}
 $set{thousand,$.}$set{decimal,.}$setmap{BN,,Any Country,uk,England,fr,France}
 ${
 $def{PREV,
