@@ -1,0 +1,1 @@
+../../../doc/ikiwiki/searching.mdwn
