@@ -9,6 +9,9 @@ ikiwiki (2.49) UNRELEASED; urgency=low
     prevent wikilinks added by filters from being scanned properly. But
     no known filter hook does that, so let's not waste time on it.
   * Pass a destpage parameter to the sanitize hook.
+  * The search interface now allows searching for a page by title
+    ("title:foo"), as well as for pages that contain a given link
+    ("link:bar").
 
  -- Joey Hess <joeyh@debian.org>  Fri, 30 May 2008 19:08:54 -0400
 
